# flok

./: .gitignore  1-to-10.md  AGENTS.md  Cargo.toml  LICENSE  MCP Integration Impact on Flok Tool System.md  README.md  clippy.toml  flok.all-gpt-5.4-high.toml  flok.example.toml  from-cline.md
.github/workflows/: rust.yml
.specify/memory/: constitution.md
crates/flok/: Cargo.toml
crates/flok-apply/: Cargo.toml
crates/flok-apply/src/: apply.rs  fuzzy.rs  lib.rs
crates/flok-core/: Cargo.toml
crates/flok-core/src/: bus.rs  compaction.rs  config.rs  lib.rs  mcp.rs  plan.rs  routing.rs  snapshot.rs  team.rs  testutil.rs  verification.rs  worktree.rs
crates/flok-core/src/agent/: mod.rs
crates/flok-core/src/compress/: filter.rs  history.rs  mod.rs  pruning.rs
crates/flok-core/src/lsp/: mod.rs
crates/flok-core/src/permission/: arity.rs  defaults.rs  evaluate.rs  mod.rs  path.rs  rule.rs
crates/flok-core/src/provider/: anthropic.rs  fallback.rs  minimax.rs  mock.rs  mod.rs  models.rs  openai.rs  registry.rs  types.rs
crates/flok-core/src/review/: engine.rs  mod.rs  prompts.rs  self_review.rs  types.rs
crates/flok-core/src/session/: branch.rs  engine.rs  mod.rs  state.rs  tree.rs
crates/flok-core/src/skills/: code-review.md  handle-pr-feedback.md  mod.rs  self-review-loop.md  source-driven-development.md  spec-review.md
crates/flok-core/src/token/: cost.rs  counter.rs  mod.rs
crates/flok-core/src/tool/: bash.rs  compression.rs  edit.rs  fast_apply.rs  glob_tool.rs  grep.rs  lsp.rs  memory.rs  mod.rs  path_security.rs  plan.rs  plan_tools.rs  question.rs  read.rs  registry.rs  review_tool.rs  skill.rs  smart_grep.rs  task.rs  team_tools.rs  todowrite.rs  webfetch.rs  write.rs
crates/flok-core/tests/: compression.rs  opus_4_7_smoke.rs  output_compression.rs  per_agent_config.rs  permissions.rs  runtime_fallback.rs  session_branching.rs  skills.rs  tools.rs  undo_redo.rs
crates/flok-db/: Cargo.toml
crates/flok-db/src/: lib.rs  migrations.rs  models.rs  queries.rs  schema.rs
crates/flok-tui/: Cargo.toml
crates/flok-tui/src/: adapter.rs  app.rs  app_event.rs  bottom_pane.rs  chat_view.rs  clipboard.rs  footer.rs  lib.rs  markdown.rs  run.rs  selection.rs  sidebar.rs  spinner.rs  stream.rs  test_support.rs  theme.rs  tui.rs  types.rs
crates/flok-tui/src/components/: app.rs  dialog.rs  footer.rs  header.rs  input.rs  markdown.rs  messages.rs  mod.rs  permission.rs  question.rs  selection.rs  selection_overlay.rs  sidebar.rs
crates/flok-tui/src/composer/: history.rs  mod.rs  textarea.rs
crates/flok-tui/src/history/: mod.rs  render.rs
crates/flok-tui/src/overlays/: mod.rs  permission.rs  picker.rs  question.rs  slash_popup.rs
crates/flok-tui/tests/: selection.rs  skeleton_renders.rs  streaming_perf.rs
crates/flok/src/: cli.rs  main.rs
docs/: mcp.md
docs/diagrams/: 01-system-architecture.md  02-interactive-session-flow.md  03-subagents-teams-worktrees.md  README.md
specs/001-core-architecture/: spec.md
specs/002-provider-system/: spec.md
specs/003-session-engine/: spec.md
specs/004-tool-system/: spec.md
specs/005-agent-teams/: spec.md
specs/006-token-cache/: spec.md
specs/007-tui/: spec.md
specs/008-skills-plugins/: spec.md
specs/009-mcp-integration/: spec.md
specs/010-git-worktree-isolation/: spec.md
specs/011-lsp-integration/: spec.md
specs/012-intelligent-routing/: spec.md
specs/013-plan-execute/: spec.md
specs/014-native-fast-apply/: spec.md
specs/015-token-compression/: spec.md
specs/016-panel-selection/: spec.md
specs/017-iocraft-migration/: spec.md
specs/018-tree-sessions/: spec.md
specs/019-streaming-performance/: spec.md
