[package]
name = "flok-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core library for flok: session engine, providers, tools, agents"

[features]
testutil = ["dep:tempfile"]

[lints]
workspace = true

[dependencies]
flok-db = { path = "../flok-db" }
flok-apply = { path = "../flok-apply" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
secrecy = { workspace = true }
reqwest = { workspace = true }
reqwest-eventsource = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
tracing = { workspace = true }
directories = { workspace = true }
arc-swap = { workspace = true }
dashmap = { workspace = true }
tiktoken-rs = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
glob = { workspace = true }
regex = { workspace = true }
blake3 = { workspace = true }
jsonschema = { workspace = true }
lru = { workspace = true }
tokio-stream = { workspace = true }
url = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-bash = { workspace = true }
tempfile = { workspace = true, optional = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
flok-core = { path = ".", features = ["testutil"] }
