[package]
name = "flok-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Database layer for flok: SQLite, migrations, schema"

[lints]
workspace = true

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
insta = { workspace = true }
