[package]
name = "flok-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Terminal UI components for flok (iocraft-based)"

[lints]
workspace = true

[dependencies]
flok-core = { path = "../flok-core" }

iocraft = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
arboard = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
